add data updated lec01

--- a/Schedule.html
+++ b/Schedule.html
@@ -75,91 +75,132 @@ table {
 <table>
 <thead>
 <tr class="header">
-<th align="right">Week</th>
+<th align="left">Week</th>
 <th align="left">Date</th>
 <th align="left">Notes</th>
+<th align="left">Reading</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="right">1</td>
+<td align="left">Week 1-M</td>
 <td align="left">01/25</td>
-<td align="left"><a href="wk01.html">wk01</a>: Intro to the course. MLR</td>
+<td align="left"><a href="wk01.html">wk01</a>: Intro to the course. Vocabulary</td>
+<td align="left">Ch2</td>
 </tr>
 <tr class="even">
-<td align="right">2</td>
-<td align="left">02/01</td>
-<td align="left">wk02: MLR - Transformations &amp; Predictions</td>
+<td align="left">Week 1-W</td>
+<td align="left">01/27</td>
+<td align="left">wk01: Preparing data for analysis: Tidy data, codebooks, missing values</td>
+<td align="left">Ch3</td>
 </tr>
 <tr class="odd">
-<td align="right">3</td>
+<td align="left">Week 1-F</td>
+<td align="left">01/29</td>
+<td align="left">wk01: Preparing data for analysis: Outliers, recodes, transformations</td>
+<td align="left">Ch4</td>
+</tr>
+<tr class="even">
+<td align="left">Week 2-M</td>
+<td align="left">02/01</td>
+<td align="left">wk02: Choosing the appropriate analysis</td>
+<td align="left">Ch5</td>
+</tr>
+<tr class="odd">
+<td align="left">Week 2-W</td>
+<td align="left">02/03</td>
+<td align="left">wk02: Multiple Linear Regression - Analysis and interpretation</td>
+<td align="left">NA</td>
+</tr>
+<tr class="even">
+<td align="left">Week 2-F</td>
+<td align="left">02/05</td>
+<td align="left">wk02: Multiple Linear Regression - Model fit &amp; Predictions</td>
+<td align="left">NA</td>
+</tr>
+<tr class="odd">
+<td align="left">Week 3-NA</td>
 <td align="left">02/08</td>
 <td align="left">wk03: Variable Selection - Manual, Forward and backwards selection, best subsets</td>
+<td align="left">NA</td>
 </tr>
 <tr class="even">
-<td align="right">4</td>
+<td align="left">Week 4-NA</td>
 <td align="left">02/15</td>
-<td align="left">wk04: Variable Selection - Penalized functions</td>
+<td align="left">NA</td>
+<td align="left">NA</td>
 </tr>
 <tr class="odd">
-<td align="right">5</td>
+<td align="left">Week 5-NA</td>
 <td align="left">02/22</td>
-<td align="left">wk05: Variable Selection - Factor Analysis and PCA</td>
+<td align="left">wk05: Variable Selection / Dimension Reduction- Factor Analysis and PCA</td>
+<td align="left">NA</td>
 </tr>
 <tr class="even">
-<td align="right">6</td>
+<td align="left">Week 6-NA</td>
 <td align="left">02/29</td>
 <td align="left">wk06: Project 1: Model Building</td>
+<td align="left">NA</td>
 </tr>
 <tr class="odd">
-<td align="right">7</td>
+<td align="left">Week 7-NA</td>
 <td align="left">03/07</td>
 <td align="left">wk07: Midterm</td>
+<td align="left">NA</td>
 </tr>
 <tr class="even">
-<td align="right">8</td>
+<td align="left">Week 8-NA</td>
 <td align="left">03/14</td>
 <td align="left">wk08: Spring Break - No Class</td>
+<td align="left">NA</td>
 </tr>
 <tr class="odd">
-<td align="right">9</td>
+<td align="left">Week 9-NA</td>
 <td align="left">03/21</td>
 <td align="left">wk09: Contingency tables</td>
+<td align="left">NA</td>
 </tr>
 <tr class="even">
-<td align="right">10</td>
+<td align="left">Week 10-NA</td>
 <td align="left">03/28</td>
 <td align="left">wk10: Logistic regression</td>
+<td align="left">NA</td>
 </tr>
 <tr class="odd">
-<td align="right">11</td>
+<td align="left">Week 11-NA</td>
 <td align="left">04/04</td>
 <td align="left">wk11: CART / Random Forests</td>
+<td align="left">NA</td>
 </tr>
 <tr class="even">
-<td align="right">12</td>
+<td align="left">Week 12-NA</td>
 <td align="left">04/11</td>
 <td align="left">wk12: Clustering - RI models</td>
+<td align="left">NA</td>
 </tr>
 <tr class="odd">
-<td align="right">13</td>
+<td align="left">Week 13-NA</td>
 <td align="left">04/18</td>
 <td align="left">wk13: Repeated Measures - RI models</td>
+<td align="left">NA</td>
 </tr>
 <tr class="even">
-<td align="right">14</td>
+<td align="left">Week 14-NA</td>
 <td align="left">04/25</td>
 <td align="left">wk14: Missing Data - Identification and problems</td>
+<td align="left">NA</td>
 </tr>
 <tr class="odd">
-<td align="right">15</td>
+<td align="left">Week 15-NA</td>
 <td align="left">05/02</td>
 <td align="left">wk15: Missing Data - Multiple Imputation</td>
+<td align="left">NA</td>
 </tr>
 <tr class="even">
-<td align="right">16</td>
+<td align="left">Week 16-NA</td>
 <td align="left">05/09</td>
 <td align="left">wk16: Project 2: Predictive Modeling</td>
+<td align="left">NA</td>
 </tr>
 </tbody>
 </table>
