--- a/notes/lec01_Intro.html
+++ b/notes/lec01_Intro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Introduction</title>
+  <title>Introduction to the Class</title>
 
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -25,7 +25,7 @@
     var SLIDE_CONFIG = {
       // Slide settings
       settings: {
-                title: 'Introduction',
+                title: 'Introduction to the Class',
                         useBuilds: true,
         usePrettify: true,
         enableSlideAreas: true,
@@ -35,7 +35,7 @@
       // Author information
       presenters: [
             {
-        name:  '<em>Use arrow keys for navigation</em>' ,
+        name:  'Robin Donatello' ,
         company: '',
         gplus: '',
         twitter: '',
@@ -88,7 +88,7 @@
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">Robin Donatello - Math 456 Spring 2016</p>
+            <p style="margin-top: 6px; margin-left: -2px;">Math 456 Spring 2016</p>
           </hgroup>
   </slide>
 
@@ -103,6 +103,17 @@
 <li>Are you an R user? If so, for how long?</li>
 <li>What do you want to get out of this class?</li>
 </ul></li>
+</ul>
+
+</article></slide><slide class=''><hgroup><h2>Class website</h2></hgroup><article  id="class-website">
+
+<p><a href='http://norcalbiostat.github.io/MATH456' title=''>http://norcalbiostat.github.io/MATH456</a></p>
+
+<ul>
+<li>First stop for all class materials.</li>
+<li>Hosted by <a href='https://github.com/' title=''>GitHub</a>.</li>
+<li>The <a href='./Syllabus.html' title=''>syllabus</a> covers course details such as grading, office hours and required materials.</li>
+<li>Additional set of slides containing instructions on how to download and install the required programs.</li>
 </ul>
 
 </article></slide><slide class=''><hgroup><h2>Structure of this class</h2></hgroup><article  id="structure-of-this-class">
@@ -124,24 +135,43 @@
 <li>Take home message (5 min)</li>
 </ul>
 
-</article></slide><slide class=''><hgroup><h2>General weekly structure.</h2></hgroup><article  id="general-weekly-structure.">
+</article></slide><slide class=''><hgroup><h2>Course Content Learning Outcomes</h2></hgroup><article  id="course-content-learning-outcomes">
 
 <ul>
-<li><strong>Monday</strong>: New topic introduction and discussion. First set of easy hands on application of topic using R.</li>
-<li><strong>Wednesday</strong>: Discussion of interpretations and limitations. More complicated examples.</li>
-<li><strong>Friday</strong>: Finish discussion of topic and example problems.</li>
+<li>Understand the value of, and be able to create a codebook / data dictionary.</li>
+<li>Translate a research question into an appropriate statistical analysis plan.</li>
+<li>Prepare data for analysis by cleaning and transforming raw data.</li>
+<li>Perform select statistical analyses in a reproducible manner.</li>
+<li>Interpret the results of the statistical analysis in plain language.</li>
+<li>Use model selection techniques to build predictive models for continuous and categorical data types.</li>
 </ul>
 
-</article></slide><slide class=''><hgroup><h2>Class website</h2></hgroup><article  id="class-website">
+</article></slide><slide class=''><hgroup><h2>Required Materials: Textbooks</h2></hgroup><article  id="required-materials-textbooks">
 
-<p><a href='http://norcalbiostat.github.io/MATH456' title=''>http://norcalbiostat.github.io/MATH456</a></p>
+<p>Practical Multivariate Analysis 5th Edition. Afifi, May, Clark ISBN 9781439816806</p>
+
+<p>4th Edition should be OK, but the discussion of software is outdated and it does not include R.</p>
+
+</article></slide><slide class=''><hgroup><h2>Required Materials: Computers</h2></hgroup><article  id="required-materials-computers">
 
 <ul>
-<li>First stop for all class materials.</li>
-<li>Hosted by <a href='https://github.com/' title=''>GitHub</a>.</li>
-<li>The <a href='./Syllabus.html' title=''>syllabus</a> covers course details such as grading, office hours and required materials.</li>
-<li>Additional set of slides containing instructions on how to download and install the required programs.</li>
+<li>We will be using the statistical programming language R.</li>
+<li>Loaner laptops will be available for you to use during class time only.</li>
+<li><p>You will eventually have to set up and bring your own laptop to class.</p></li>
+<li><strong>R</strong> <a href='http://cran.r-project.org/' title=''>http://cran.r-project.org/</a></li>
+<li><strong>R-Studio</strong> <a href='http://www.rstudio.com/products/rstudio/download/' title=''>http://www.rstudio.com/products/rstudio/download/</a></li>
+<li><p><strong>The typesetting environment LaTeX</strong> <a href='http://www.latex-project.org/' title=''>http://www.latex-project.org/</a></p></li>
 </ul>
+
+<p>Download and install the required software within the first two weeks of class.</p>
+
+</article></slide><slide class=''><hgroup><h2>New to R - Your choices</h2></hgroup><article  id="new-to-r---your-choices">
+
+<ol>
+<li>Go through any number of self-paced free online tutorials. Recommended ones are <a href='https://www.datacamp.com/courses/free-introduction-to-r' title=''>DataCamp</a>, <a href='http://tryr.codeschool.com/' title=''>TryR</a>, and <a href='http://www.r-tutor.com/r-introduction' title=''>R Tutorial</a>.<br/></li>
+<li>Go through a self-paced online R Bootcamp specifically designed to provide just the basics needed for coursework in this class. This includes an introduction to Markdown. This Bootcamp can be found at <a href='http://norcalbiostat.github.io/R-Bootcamp/' title=''>http://norcalbiostat.github.io/R-Bootcamp/</a></li>
+<li>Plan on enrolling in the in-person version of this R Bootcamp at the start of the semester. This will be 2 hour classes, 2 nights/week, for the first 3 weeks. Specific enrollment details will be announced as they are finalized.</li>
+</ol>
 
 </article></slide><slide class=''><hgroup><h2>Time Committment</h2></hgroup><article  id="time-committment">
 
@@ -155,31 +185,21 @@
 
 <ul>
 <li>Your first resource is each other.</li>
-<li>Use the class forum for R and Markdown debugging problems.</li>
+<li>Use the class <a href='https://piazza.com/mail.csuchico.edu/spring2016/math456' title=''>Piazza</a> forum for R and Markdown debugging problems.</li>
 <li>Come to the RUG meetings / open work sessions.</li>
 <li>I will <strong>not</strong> answer emails about any coding problems. Check the class discussion forum for a solution first.</li>
 <li>Another great resource is <a href='http://stackoverflow.com/questions/tagged/r' title=''>StackOverflow</a> using the <code>r</code> or <code>markdown</code> tags.</li>
 <li>Prepare a <a href='http://stackoverflow.com/questions/5963269/how-to-make-a-great-r-reproducible-example' title=''>minimal working example</a> of your problem on the forum, it may be helpful to include a screenshot of the problem.</li>
 </ul>
 
-</article></slide><slide class=''><hgroup><h2>Plagerism</h2></hgroup><article  id="plagerism">
-
-<ul>
-<li>Working with others is expected, directly copying code and interpretations is not</li>
-<li>Completely unacceptable</li>
-<li>Easily detected</li>
-<li>Will result in 0 credit for all parties if observed</li>
-<li>Does nothing but make it harder to understand the material and pass the class</li>
-</ul>
-
 </article></slide><slide class=''><hgroup><h2>Getting started!</h2></hgroup><article  id="getting-started">
 
 <ul>
-<li>Review the <a href='Syllabus.html' title=''>Syllabus</a></li>
-<li>Install the necessary programs (<a href='http://cran.r-project.org/' title=''>R</a>, <a href='http://www.rstudio.com/products/rstudio/download/' title=''>R Studio</a>, <a href='http://www.latex-project.org/' title=''>\(\LaTeX\)</a>)</li>
+<li>Review the <a href='Syllabus.html' title=''>Syllabus</a> for more details.</li>
+<li>Install (<a href='http://cran.r-project.org/' title=''>R</a>, <a href='http://www.rstudio.com/products/rstudio/download/' title=''>R Studio</a>, and <a href='http://www.latex-project.org/' title=''>\(\LaTeX\)</a>)</li>
 <li>Join the <a href='https://piazza.com/mail.csuchico.edu/spring2016/math456' title=''>Piazza</a> class forum and say hi.</li>
 <li>Bookmark the <a href='http://norcalbiostat.github.io/MATH456' title=''>course website</a></li>
-<li>Read the course notes for <a href='wk01.html' title=''>Week 1</a> and start preparing to get your hands dirty on Wednesday.</li>
+<li>Review the course notes for <a href='wk01.html' title=''>Week 1</a> and be ready to discuss the material in class Wednesday.</li>
 </ul></article></slide>
 
 
