add lec02 notes updated naming structure

--- a/data/Datasets.html
+++ b/data/Datasets.html
@@ -105,19 +105,29 @@ table {
 <td align="left"><a href="MiceCodebook.txt">MiceCodebook.txt</a></td>
 </tr>
 <tr class="odd">
+<td align="left"><a href="NCbirths.csv">NCbirths.csv</a></td>
+<td align="left"><a href="NCbirthsCodebook.pdf">NCbirthsCodebook.pdf</a></td>
+</tr>
+<tr class="even">
 <td align="left"><a href="Parhiv.txt">Parhiv.txt</a></td>
 <td align="left"><a href="ParhivCodebook.txt">ParhivCodebook.txt</a></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left"><a href="School23.txt">School23.txt</a></td>
 <td align="left"><a href="School23Codebook.txt">School23Codebook.txt</a></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left"><a href="Surv.txt">Surv.txt</a></td>
 <td align="left"><a href="SurvCodebook.txt">SurvCodebook.txt</a></td>
 </tr>
 </tbody>
 </table>
+</div>
+<div id="additional-files-manually-added" class="section level3">
+<h3>Additional files manually added</h3>
+<ul>
+<li><a href="NCBirthsCodebook.Rmd">RMD file for NC Births Codebook</a></li>
+</ul>
 </div>
 
 
