--- a/wk01-M.html
+++ b/wk01-M.html
@@ -67,6 +67,7 @@ img {
 </div>
 
 
+<p><a href="Schedule.html">[Prev]</a> <a href="wk01-W.html">[Next]</a></p>
 <div id="announcements" class="section level1">
 <h1>Announcements</h1>
 <p>Welcome to Applied Statistics II!</p>
@@ -79,7 +80,7 @@ img {
 <h1>Notes</h1>
 <ul>
 <li>Intro to the class <a href="notes/lec01_Intro.html">[HTML]</a></li>
-<li>Characterizing data <a href="notes/lec02_data_prep.html">[HTML]</a><a href="notes/lec02_data_prep.pdf">[PDF]</a></li>
+<li>Preparing data for Analysis <a href="notes/lec02_data_prep.html">[HTML]</a><a href="notes/lec02_data_prep.pdf">[PDF]</a></li>
 <li>Day 1 Handouts: Afifi Ch2</li>
 </ul>
 </div>
