--- a/wk01-W.html
+++ b/wk01-W.html
@@ -67,6 +67,7 @@ img {
 </div>
 
 
+<p><a href="wk01-M.html">[Prev]</a> <a href="wk01-F.html">[Next]</a></p>
 <div id="announcements" class="section level1">
 <h1>Announcements</h1>
 </div>
