--- a/wk01-F.html
+++ b/wk01-F.html
@@ -67,12 +67,13 @@ img {
 </div>
 
 
-<p><a href="wk02-M.html">[Prev]</a> <a href="wk01-W.html">[Next]</a></p>
+<p><a href="wk01-W.html">[Prev]</a> <a href="wk02-M.html">[Next]</a></p>
 <div id="announcements" class="section level1">
 <h1>Announcements</h1>
 </div>
 <div id="prepare-before-class" class="section level1">
 <h1>Prepare (Before class)</h1>
+<p>Learn <code>dplyr</code> by either going through - The <a href="https://www.datacamp.com/courses/dplyr-data-manipulation-r-tutorial">Data Camp</a> tutorial - The <a href="http://norcalbiostat.github.io/R-Bootcamp/labs/Lab7-DataCleaning.html">R Bootcamp</a> tutorial - Or any of the <strong>Additional Resources</strong> listed at the bottom of the Bootcamp web page.</p>
 </div>
 <div id="notes" class="section level1">
 <h1>Notes</h1>
@@ -92,6 +93,14 @@ img {
 </div>
 <div id="practice-after-class" class="section level1">
 <h1>Practice (After Class)</h1>
+<p>Explore the CA Poverty data set.</p>
+<ol style="list-style-type: decimal">
+<li>Create a scatterplot of <code>PctPov</code> against the row index.</li>
+<li>Identify and exclude any outliers on percent overall poverty.</li>
+<li>Recreate the plot on top of page 6 in the Narrative Examples pdf <em>Overall Poverty Rate in Selected Counties of the Bay Area and San Joaquin Valley, California 2000, 2005-2007, 2008-2010</em>.</li>
+<li>Redo this plot for the <strong>regions</strong> north of, and including Sacramento.</li>
+</ol>
+<p><a href="practice/exploring_CA_poverty_data.html">Solutions</a></p>
 </div>
 
 
