--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 	  <li> Office Hours: TBD during the second week </li>
 	  <li> <a href = "Syllabus.html"> Syllabus </a> </li>
 	  <li> <a href = "Schedule.html"> Schedule </a> </li>
+	  <li> <a href = "data/Datasets.html"> Data </a> </li>
 	<p>
 	
    
