updated structure and wk1

--- a/notes/lec00_Intro.html
+++ b/notes/lec00_Intro.html
@@ -52,8 +52,48 @@ img {
 </div>
 
 
-<div id="science-and-statistics" class="section level1">
-<h1>Science and Statistics</h1>
+<style>
+h1 {
+  font-size: 36px;
+  font-weight: 700;
+  padding-bottom: 10px;
+  background: url('../images/bg_hr.png') repeat-x bottom;
+  color: #008000;
+}
+
+h2 {
+  font-size: 32px;
+   color:#009900;
+}
+
+h3 {
+  font-size: 24px;
+     color:#00b359;
+}
+
+
+h5 {
+  font-size: 14px;
+  font-weight: 700;
+  padding-bottom: 10px;
+  background-color: GreenYellow;
+  padding: 2px;
+  border: 1px solid DarkGreen;
+  border-radius: 3px;
+  margin: 0 5px;
+  max-width: 100%;
+  color: black;
+}
+
+body{
+  font-family: Helvetica;
+  font-size: 13pt;
+  color: black;
+}
+
+</style>
+<div id="science-and-statistics" class="section level2">
+<h2>Science and Statistics</h2>
 <ol style="list-style-type: decimal">
 <li>Scientific questions</li>
 <li>Study Design</li>
@@ -62,6 +102,7 @@ img {
 <li>Data Management, Screening and Transformation</li>
 <li>Multivariate Analysis</li>
 </ol>
+</div>
 <div id="course-content-learning-outcomes" class="section level2">
 <h2>Course Content Learning Outcomes</h2>
 <p>Upon successful completion of this course, students will be able to:</p>
@@ -69,13 +110,14 @@ img {
 <li>Translate a research question into an appropriate statistical analysis plan.</li>
 <li>Prepare data for analysis by cleaning and transforming raw data.</li>
 <li>Perform research in a reproducible manner.</li>
-<li>Build statistical models to examine real processes.</li>
-<li>Report the results of the analysis in plain language.</li>
+<li>Build a multivariate statistical model used to examine a real process.</li>
+<li>Report the results of the analysis in plain language to a consulting client or collaborator.</li>
 </ul>
 </div>
 <div id="topics-covered" class="section level2">
 <h2>Topics Covered</h2>
 <ul>
+<li>Data cleaning</li>
 <li>Multiple linear regression</li>
 <li>Model building: Variable selection</li>
 <li>Dimension Reduction: Principle components and Factor Analysis</li>
@@ -90,35 +132,10 @@ img {
 <h2>Structure of this class</h2>
 <ul>
 <li>Quasi flipped classroom.</li>
-<li>Students read lecture notes, book readings and start coding prior to class.</li>
+<li>Students read the book, review lecture notes and work on practice coding prior to class.</li>
 <li>Class time is devoted to reviewing the material, answering questions, working examples, discussing interpretations and limitations of methods learned.</li>
-</ul>
-</div>
-<div id="general-schedule." class="section level2">
-<h2>General schedule.</h2>
-<ul>
-<li>Monday
-<ul>
-<li>Study Hall or Quiz (15 min).<br /></li>
-<li>Lecture / Discussion.</li>
-</ul></li>
-<li>Wednesday
-<ul>
-<li>Lecture / Discussion.</li>
-<li>Start computer examples.</li>
-</ul></li>
-<li>Friday
-<ul>
-<li>Computer work day.</li>
-<li>Homework is assigned on Friday during class and due before class on the following Friday.</li>
-</ul></li>
-</ul>
-<p>Details on weekly topics can be found on the <a href="./Schedule.html">schedule</a> on the course website.</p>
-<ul>
-<li>Exam 1: Monday of Week 7</li>
-<li>Exam 2: Finals week</li>
-<li>Report 1: End of Week 7</li>
-<li>Report 2: End of Finals week</li>
+<li>Mondays will have either a quiz or homework submission.</li>
+<li>Expect to bring your laptop every day to class.</li>
 </ul>
 </div>
 <div id="class-materials" class="section level2">
@@ -126,24 +143,20 @@ img {
 <ul>
 <li>Class website: <a href="http://norcalbiostat.github.io/MATH456" class="uri">http://norcalbiostat.github.io/MATH456</a></li>
 <li>First stop for all class materials.</li>
+<li>Details on weekly topics can be found on the <a href="./Schedule.html">schedule</a>.</li>
 <li>The <a href="./Syllabus.html">syllabus</a> covers course details such as grading, office hours and required materials. Spend 5 minutes to read that now.</li>
 <li>Questions?</li>
 </ul>
 </div>
-<div id="computer-programming" class="section level2">
-<h2>Computer Programming</h2>
+<div id="helpful-web-resources-for-learning-r" class="section level2">
+<h2>Helpful web resources for learning R</h2>
 <ul>
-<li>If you do not already have R &amp; R Studio installed, check out a laptop.</li>
-<li>Hands on Intro to R Studio and Markdown.</li>
+<li>R Programming blog <a href="http://rprogramming.net" class="uri">http://rprogramming.net</a></li>
+<li>Quick-R <a href="http://www.statmethods.net/" class="uri">http://www.statmethods.net/</a></li>
+<li>Cookbook for R <a href="http://www.cookbook-r.com/" class="uri">http://www.cookbook-r.com/</a></li>
+<li>R Examples Repository <a href="http://www.uni-kiel.de/psychologie/rexrepos/index.html" class="uri">http://www.uni-kiel.de/psychologie/rexrepos/index.html</a></li>
+<li>R Bootcamp Data visualization tutorial <a href="http://norcalbiostat.github.io/R-Bootcamp/labs/Data_Visualization_Tutorial_Full.html" class="uri">http://norcalbiostat.github.io/R-Bootcamp/labs/Data_Visualization_Tutorial_Full.html</a></li>
 </ul>
-</div>
-<div id="prepare-for-wednesday" class="section level2">
-<h2>Prepare for Wednesday</h2>
-<ul>
-<li>Read Afifi Ch 1-3</li>
-<li>Afifi problems 2.2, 2.5 - Be prepared to share these with the class on Wednesday. Recommended to write up responses in Markdown.</li>
-</ul>
-</div>
 </div>
 
 
