--- a/wk02.html
+++ b/wk02.html
@@ -123,24 +123,21 @@ body{
 <h3>Monday</h3>
 <p><strong>Prepare:</strong> Read Afifi Ch 4.</p>
 <ul>
-<li>Homework submission</li>
-<li>Lec 01: Data screening and transformations.</li>
+<li>Homework 1 submission - Selected On Your Own problems from last week.</li>
+<li>Data screening and transformations.</li>
 </ul>
 </div>
 <div id="wednesday" class="section level3">
 <h3>Wednesday</h3>
 <p><strong>Prepare:</strong> Read Afifi Ch 5.</p>
 <ul>
-<li>Lec 01: Selecting Appropriate Analysis</li>
+<li>Selecting Appropriate Analysis</li>
 </ul>
 </div>
 <div id="friday" class="section level3">
 <h3>Friday</h3>
-<p><strong>Prepare:</strong></p>
+<p><strong>Prepare:</strong> Read Afifi Ch 6. * Review of Correlation and Simple Linear Regression</p>
 </div>
-</div>
-<div id="homework-after-class" class="section level2">
-<h2>Homework (After class)</h2>
 </div>
 
 
