add pdfs, change notes to google groups, create Rproj

--- a/Syllabus.html
+++ b/Syllabus.html
@@ -53,7 +53,7 @@ img {
 <h1>MATH 456, Applied Statistics II, Section 01, Spring 2016</h1>
 <div id="course-information" class="section level3">
 <h3>Course Information</h3>
-<p><strong>Instructor:</strong> Dr. Robin Donatello<br /><strong>Office Location:</strong> Holt 216<br /><strong>Telephone:</strong> 898-5767<br /><strong>E-mail:</strong> <a href="mailto:rdonatello@csuchico.edu">rdonatello@csuchico.edu</a><br /><strong>Office Hours:</strong> TBD Week 2 <strong>Class days and times:</strong> MWF 2-2:50, Holt 155<br /><strong>Prerequisites:</strong> MATH 315/615 at Chico State or instructor permission.<br /><strong>Course Website:</strong> <a href="http://norcalbiostat.github.io/MATH456/" class="uri">http://norcalbiostat.github.io/MATH456/</a><br /><strong>Disucssion Forum:</strong> <a href="https://groups.google.com/forum/" class="uri">https://groups.google.com/forum/</a>#!forum/csuc_stat</p>
+<p><strong>Instructor:</strong> Dr. Robin Donatello<br /><strong>Office Location:</strong> Holt 216<br /><strong>Telephone:</strong> 898-5767<br /><strong>E-mail:</strong> <a href="mailto:rdonatello@csuchico.edu">rdonatello@csuchico.edu</a><br /><strong>Office Hours:</strong> TBD Week 2<br /><strong>Class days and times:</strong> MWF 2-2:50, Holt 155<br /><strong>Prerequisites:</strong> MATH 315/615 at Chico State or instructor permission.<br /><strong>Course Website:</strong> <a href="http://norcalbiostat.github.io/MATH456/" class="uri">http://norcalbiostat.github.io/MATH456/</a><br /><strong>Disucssion Forum:</strong> <a href="https://groups.google.com/forum/" class="uri">https://groups.google.com/forum/</a>#!forum/csuc_stat</p>
 </div>
 <div id="course-description-and-goals" class="section level2">
 <h2>Course Description and Goals</h2>
@@ -100,7 +100,7 @@ img {
 <li>All course materials can be found on the <a href="http://norcalbiostat.github.io/MATH456/">course website</a>.<br /></li>
 <li>We will be using a <a href="https://groups.google.com/forum/#!forum/csuc_stat">Google Group</a> as the place for discussion outside of class.<br /></li>
 <li>You are responsible for regularly checking this forum for updates and announcements.<br /></li>
-<li>The daily class schedule can be found on the class website <a href="Schedule.html">here</a>.<br /></li>
+<li>The daily class <a href="Schedule.html">schedule</a> can be found on the class website.</li>
 <li>It is your responsibility to be aware of the current schedule.</li>
 </ul>
 </div>
