--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 	  <li> Office Hours: TBD during the second week </li>
 	  <li> <a href = "Syllabus.html"> Syllabus </a> </li>
 	  <li> <a href = "Schedule.html"> Schedule </a> </li>
-	  <li> <a href = "data/Datasets.html"> Data </a> </li>
+	  <li> <a href = "https://groups.google.com/forum/#!forum/csuc_stat"> Google Group (Discussion Forum) </a> </li>
+	  <li> <a href = "https://drive.google.com/a/mail.csuchico.edu/folderview?id=0B83Z8_sNw3KPcnVrYzVFRHUtcHM&usp=sharing"> Google Drive </a> </li>
+	  
 	<p>
 	
    
