--- a/notes/lec00_Intro.html
+++ b/notes/lec00_Intro.html
@@ -144,7 +144,8 @@ body{
 <li>Class website: <a href="http://norcalbiostat.github.io/MATH456" class="uri">http://norcalbiostat.github.io/MATH456</a></li>
 <li>First stop for all class materials.</li>
 <li>Details on weekly topics can be found on the <a href="./Schedule.html">schedule</a>.</li>
-<li>The <a href="./Syllabus.html">syllabus</a> covers course details such as grading, office hours and required materials. Spend 5 minutes to read that now.</li>
+<li>The <a href="./Syllabus.html">syllabus</a> covers course details such as grading, office hours and required materials.</li>
+<li>Shared <a href="https://drive.google.com/a/mail.csuchico.edu/folderview?id=0B83Z8_sNw3KPcnVrYzVFRHUtcHM&amp;usp=sharing">Google Drive</a> Folder: I will use this to store and share data, and possibly submit homework (TBD)</li>
 <li>Questions?</li>
 </ul>
 </div>
