--- a/wk01.html
+++ b/wk01.html
@@ -115,8 +115,9 @@ body{
 <h3>Notes and Materials</h3>
 <ul>
 <li>The class <a href="./Syllabus.html">Syllabus</a>.</li>
-<li>Intro to the Class <a href="notes/lec00_Intro.pdf">[PDF]</a><a href="notes/lec00_Intro.html">[HTML]</a></li>
-<li>Preparing Data for Analysis <a href="notes/lec01_data_prep.pdf">[PDF]</a><a href="notes/lec01_data_prep.html">[HTML]</a></li>
+<li>lec00: Intro to the Class <a href="notes/lec00_Intro.pdf">[PDF]</a><a href="notes/lec00_Intro.html">[HTML]</a></li>
+<li>lec01: Preparing Data for Analysis <a href="notes/lec01_data_prep.pdf">[PDF]</a><a href="notes/lec01_data_prep.html">[HTML]</a></li>
+<li><a href="https://drive.google.com/a/mail.csuchico.edu/file/d/0B83Z8_sNw3KPUG15QTEtSXpZODA/view?usp=sharing">Recruitment database</a></li>
 </ul>
 </div>
 </div>
@@ -126,20 +127,20 @@ body{
 <h3>Monday</h3>
 <ul>
 <li>Intro to the class</li>
-<li>Review of course material layout</li>
+<li>Review of webpage layout</li>
 <li>Q-Focus Activity</li>
 </ul>
 </div>
 <div id="wednesday" class="section level3">
 <h3>Wednesday</h3>
-<p><strong>Prepare:</strong> Read Afifi Ch 1-3. Complete Afifi problem 2.5. Recommended to write up responses in Markdown.</p>
+<p><strong>Prepare:</strong> Read Afifi Ch 1-3. “<em>On Your Own</em>” problems for Ch 2.</p>
 <ul>
+<li>Discuss and share answers to Afifi Problem 2.5</li>
 <li>Preparing Data for Analysis
 <ul>
-<li>Characterizing Data for Analysis</li>
-<li>Data wrangling, munging, recoding, editing, cleaning</li>
+<li>Characterizing Data for Analysis (Ch 2)</li>
+<li>Data wrangling, munging, recoding, editing, cleaning (Ch 3)</li>
 </ul></li>
-<li>Discuss and share answers to Afifi Problem 2.5</li>
 </ul>
 </div>
 <div id="friday" class="section level3">
@@ -147,14 +148,9 @@ body{
 <p><strong>Prepare:</strong> If not done yet, complete your code file with all code from the lecture code worked through.</p>
 <ul>
 <li>Finish data wrangling, munging, recoding, editing, cleaning.</li>
+<li>“<em>On Your Own</em>” problems for Ch 3</li>
 </ul>
 </div>
-</div>
-<div id="homework-after-class" class="section level2">
-<h2>Homework (After class)</h2>
-<ul>
-<li>The “<em>On Your Own</em>” problems for Ch 3</li>
-</ul>
 </div>
 
 
