fix blankweek, start wk3, add looking ahead to wk2

--- a/wk02.html
+++ b/wk02.html
@@ -121,7 +121,7 @@ border: 1px solid black;}
 
 
 </style>
-<p><a href="wk01.html">[Week 2]</a> <a href="wk03.html">[Week 3]</a></p>
+<p><a href="wk01.html">[Week 1]</a> <a href="wk03.html">[Week 3]</a></p>
 <div id="announcements" class="section level2">
 <h2>Announcements</h2>
 <p><strong>Homework Due:</strong></p>
@@ -159,6 +159,13 @@ border: 1px solid black;}
 <li>Finish Ch 4 &amp; 5</li>
 </ul>
 </div>
+</div>
+<div id="looking-ahead" class="section level2">
+<h2>Looking Ahead</h2>
+<ul>
+<li>Quiz on Monday. Ch 4 and Ch 5. Will come directly from the <em>On Your Own</em> questions.</li>
+<li>Starting Simple and Multiple Linear Regression next week.</li>
+</ul>
 </div>
 
 
